Förklarande text till användaren på regg sidan

--- a/Driftservice-Registration/Driftservice-Registration/Views/Registration/Create.cshtml
+++ b/Driftservice-Registration/Driftservice-Registration/Views/Registration/Create.cshtml
@@ -17,6 +17,10 @@
         
         <div class="row">
             <div class="col-lg-6">
+                <p>
+                    <b>Prenumerera på driftinformation</b><br />Fyll i din e-postadress och mobilnummer samt välj vilken/vilka prenumerationer du vill anmäla dig till. Du får då information när vi publicerar ny driftinformation för respektive område.
+                    Känner du dig osäker vilka tjänster du skall fylla i? Fyll i det du tror är rätt, vår Servicedesk kommer att uppdatera och justera om det behövs.
+                </p>
                 <br />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
