--- a/Driftservice-Registration/Driftservice-Registration/Views/Registration/Create.cshtml
+++ b/Driftservice-Registration/Driftservice-Registration/Views/Registration/Create.cshtml
@@ -115,13 +115,13 @@
                 </div>
             </div>
         <br/>
-        <div>
+        <div align="right"> 
             @Html.Recaptcha()
             <div class="text-danger">
                 @ViewBag.Recaptcha
             </div>
         </div>
-
+        <br/>
             <div class="row">
                 <div class="col-xs-12 col-md-12 col-lg-12 text-aligin-right">
                   <input type="submit" value="Registrera" class="btn btn-default" />
