Flyttad recaptcha, marginaler osv fixade

--- a/Driftservice-Registration/Driftservice-Registration/Content/StyleSheet.css
+++ b/Driftservice-Registration/Driftservice-Registration/Content/StyleSheet.css
@@ -113,3 +113,12 @@ footer {
     text-align: right;
     vertical-align: top;
 }
+
+#Recaptcha{
+    margin-top: 40px;
+    margin-right: 14px;
+}
+
+.margin-10px{
+    margin: 10px;
+}
