--- a/Driftservice-Registration/Driftservice-Registration/Views/Registration/Create.cshtml
+++ b/Driftservice-Registration/Driftservice-Registration/Views/Registration/Create.cshtml
@@ -59,7 +59,7 @@
                     @Html.LabelFor(model => model.PhoneNumber, htmlAttributes: new { @class = "control-label col-md-2 col-lg-4" })
                     <div class="col-md-10 col-lg-8">
                         @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })<br />
+                        @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
                     </div>
                 </div>
               </div>
@@ -87,7 +87,7 @@
                             }
 
                         <div class="ServiceTypeBlock">
-                            <label for="@item.Description">@item.Description</label>
+                            <center><label for="@item.Description">@item.Description</label></center>
                             <div class="ServiceTypeCheckBox">
                                 <input type="checkbox" class="checkbox" name="SelectedServiceType" value="@item.ServiceTypeID" id="@item.ServiceTypeID" checked="@MatchingID"/>
                             </div>
@@ -104,24 +104,26 @@
                 <div class="col-xs-2 col-md-2 col-lg-offset-2">
                     <h4><b>Val av notifiering</b></h4>
                     <div class="BorderBlack">
-                        <div class="checkBoxMargin">
-                            @Html.CheckBoxFor(m => m.SelectedSms)<b>SMS</b><br /><br />
-                            @Html.CheckBoxFor(m => m.SelectedEmail)<b>Email</b>
-                        </div>
-                    </div>
+                            <div class="row text-aligin-left margin-10px">
+                                @Html.CheckBoxFor(m => m.SelectedSms)SMS
+                            </div>
+                            <div class="row text-aligin-left margin-10px">
+                                @Html.CheckBoxFor(m => m.SelectedEmail)Email
+                            </div>
+                     </div>
                     <div class="text-danger">
                         @ViewBag.ErrorMessageNotificationType
                     </div>
                 </div>
+                <div id="Recaptcha" align="right">
+                    @Html.Recaptcha()
+                    <div class="text-danger">
+                        @ViewBag.Recaptcha
+                    </div>
+                </div>
             </div>
         <br/>
-        <div align="right"> 
-            @Html.Recaptcha()
-            <div class="text-danger">
-                @ViewBag.Recaptcha
-            </div>
-        </div>
-        <br/>
+        
             <div class="row">
                 <div class="col-xs-12 col-md-12 col-lg-12 text-aligin-right">
                   <input type="submit" value="Registrera" class="btn btn-default" />
